# cinq

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
lib/: CMakeLists.txt
res/: Cinq.rc
src/: Ayanami.cpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Cinq.cpp  Cinq.hpp  Color.hpp  Geometry.hpp  Graphics.hpp  Image.cpp  Image.hpp  Imgui.hpp  Keyboard.cpp  Keyboard.hpp  Math.hpp  Mouse.cpp  Mouse.hpp  Pipeline.cpp  Pipeline.hpp  Timer.hpp  Window.cpp  Window.hpp  Windows.hpp
src/Bindable/: Bindable.hpp  Bindables.hpp  CMakeLists.txt  ConstantBuffers.hpp  IndexBuffer.cpp  IndexBuffer.hpp  InputLayout.cpp  InputLayout.hpp  PixelShader.cpp  PixelShader.hpp  Sampler.cpp  Sampler.hpp  Texture.cpp  Texture.hpp  Topology.cpp  Topology.hpp  TransformCBuffer.cpp  TransformCBuffer.hpp  VertexBuffer.cpp  VertexBuffer.hpp  VertexShader.cpp  VertexShader.hpp
src/Core/: CMakeLists.txt  Camera.cpp  Camera.hpp  Cinq.cpp  Cinq.hpp  Color.hpp  Image.cpp  Image.hpp  Logger.cpp  Logger.hpp  Math.hpp  Pipeline.cpp  Pipeline.hpp  Timer.cpp  Timer.hpp
src/Drawable/: CMakeLists.txt  Cube.cpp  Cube.hpp  Drawable.cpp  Drawable.hpp  DrawableBase.hpp  Drawables.hpp  Plane.cpp  Plane.hpp  PointLight.cpp  PointLight.hpp  Pyramid.cpp  Pyramid.hpp  Sphere.cpp  Sphere.hpp
src/Geometry/: Cone.hpp  Cube.hpp  IndexedTriangleList.hpp  Plane.hpp  Prism.hpp  Sphere.hpp
src/Shader/: ColorBlendPS.hlsl  ColorBlendVS.hlsl  ColorIndexPS.hlsl  ColorIndexVS.hlsl  PhongPS.hlsl  PhongVS.hlsl  SolidPS.hlsl  SolidVS.hlsl  TexturePS.hlsl  TextureVS.hlsl  Types.hlsl  pixel.hlsl  vertex.hlsl
src/Window/: CMakeLists.txt  Exception.cpp  Exception.hpp  Imgui.cpp  Imgui.hpp  Keyboard.cpp  Keyboard.hpp  Mouse.cpp  Window.cpp  Window.hpp  Windows.hpp
src/shader/: pixel.hlsl  vertex.hlsl
